[package]
name = "blockchain"
version = "0.1.0"
authors = ["Aleksandr Kravtsov <sabahtalateh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
sha2 = "0.8.0"
hex = "0.4.0"
